[package]
name = "eth-receipt-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3" 